examples/test/testpolicy11636.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11636
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key6: value31
      key46: value18
      key45: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value6
      podSelector:
        matchLabels:
          key42: value3
          key8: value7
          key23: value4
